versioned_docs/version-1.2/dankmaterialshell/cli-screenshot.mdx
---
title: Screenshot
description: Capture screenshots from Wayland displays with multiple modes and formats
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`███████╗ ██████╗██████╗ ███████╗███████╗███╗   ██╗
██╔════╝██╔════╝██╔══██╗██╔════╝██╔════╝████╗  ██║
███████╗██║     ██████╔╝█████╗  █████╗  ██╔██╗ ██║
╚════██║██║     ██╔══██╗██╔══╝  ██╔══╝  ██║╚██╗██║
███████║╚██████╗██║  ██║███████╗███████╗██║ ╚████║
╚══════╝ ╚═════╝╚═╝  ╚═╝╚══════╝╚══════╝╚═╝  ╚═══╝`}
  hideTitle={true}
/>

The `dms screenshot` command captures screenshots from Wayland displays with support for multiple capture modes, output formats, and clipboard integration.

## Quick Start

```bash
# Region select, save file + clipboard
dms screenshot

# Full screen of focused output
dms screenshot full

# Clipboard only
dms screenshot --no-file
```

Press **Escape** to cancel region selection at any time.

## Capture Modes

| Mode | Command | Description |
|------|---------|-------------|
| `region` | `dms screenshot` | Select a region interactively (default) |
| `full` | `dms screenshot full` | Capture the focused output |
| `all` | `dms screenshot all` | Capture all outputs combined |
| `output` | `dms screenshot output -o NAME` | Capture a specific output by name |
| `last` | `dms screenshot last` | Capture the last selected region |

### List Available Outputs

```bash
dms screenshot list
```

## Output Formats

Use `--format` or `-f` to specify the output format. Default is `png`.

| Format | Flag | Notes |
|--------|------|-------|
| PNG | `-f png` | Default, lossless |
| JPEG | `-f jpg` | Use `-q` to set quality (1-100) |
| PPM | `-f ppm` | Raw format |

```bash
# JPEG with custom quality
dms screenshot -f jpg -q 85
```

## Options

| Flag | Short | Description |
|------|-------|-------------|
| `--cursor` | | Include cursor in screenshot |
| `--stdout` | | Output to stdout (for piping) |
| `--dir` | `-d` | Output directory |
| `--filename` | | Output filename (auto-generated if empty) |
| `--format` | `-f` | Output format: png, jpg, ppm (default: png) |
| `--quality` | `-q` | JPEG quality 1-100 (default: 90) |
| `--output` | `-o` | Output name for 'output' mode |
| `--no-clipboard` | | Don't copy to clipboard |
| `--no-file` | | Don't save to file |
| `--no-notify` | | Don't show notification |
| `--config` | `-c` | Custom DMS config directory path |
| `--help` | `-h` | Show help |

## Examples

### Region Selection

```bash
# Interactive selection, save file + clipboard
dms screenshot

# File only, no clipboard
dms screenshot --no-clipboard

# Clipboard only, no file
dms screenshot --no-file
```

### Full Screen Capture

```bash
# Focused output
dms screenshot full

# All outputs combined
dms screenshot all

# Specific output
dms screenshot output -o DP-1
```

### Repeat Last Capture

```bash
# Capture the same region as before
dms screenshot last
```

### Include Cursor

```bash
dms screenshot full --cursor
```

### Pipe to Editor

```bash
# Send to swappy for annotation
dms screenshot --stdout | swappy -f -
```

### Custom Output Location

```bash
# Save to specific directory
dms screenshot -d ~/Pictures/screenshots

# Custom filename
dms screenshot --filename my-screenshot.png
```
